--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
     <picture class="quotes-divider">
       <source media="(min-width: 700px)" srcset="./images/pattern-divider-desktop.svg">
       <source srcset="./images/pattern-divider-mobile.svg">
-      <img class="product--image" src="./images/pattern-divider-mobile.svg" alt="Gabrielle Essence Eau De Parfum">
+      <img class="product--image" src="./images/pattern-divider-mobile.svg" alt="Divider">
     </picture>
 
-    <button class="js-hook-dice" type="button" >
+    <button class="js-hook-dice" type="button" id="getQuote" aria-label="click here to update your quote of the day">
       <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg"><path d="M20 0H4a4.005 4.005 0 0 0-4 4v16a4.005 4.005 0 0 0 4 4h16a4.005 4.005 0 0 0 4-4V4a4.005 4.005 0 0 0-4-4ZM7.5 18a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3Zm0-9a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3Zm4.5 4.5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3Zm4.5 4.5a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3Zm0-9a1.5 1.5 0 1 1 0-3 1.5 1.5 0 0 1 0 3Z" fill="#202733"/>
       </svg>
     </button>
